# Mojmelo

./: .gitattributes  LICENSE  README.md  setup.mojo
benchmarks/: dbs_bench.mojo  dbs_bench.py  dtc_bench.mojo  dtc_bench.py  dtr_bench.mojo  dtr_bench.py  hdbs_bench.mojo  hdbs_bench.py  kmeans_bench.mojo  kmeans_bench.py  knn_bench.mojo  knn_bench.py  pca_bench.mojo  pca_bench.py  rfc_bench.mojo  rfc_bench.py  rfr_bench.mojo  rfr_bench.py  svm_bench.mojo  svm_bench.py
docs/: index.md
docs_md/: docfx.json
mojmelo/: Adaboost.mojo  DBSCAN.mojo  DecisionTree.mojo  GBDT.mojo  HDBSCAN.mojo  KMeans.mojo  KNN.mojo  LDA.mojo  LinearRegression.mojo  LogisticRegression.mojo  NaiveBayes.mojo  PCA.mojo  Perceptron.mojo  PolynomialRegression.mojo  RandomForest.mojo  SVM.mojo  preprocessing.mojo
pypi/: README.md  pyproject.toml
pypi/_mojmelo/: setup.mojo  setup.py
pypi/_mojmelo/mojmelo/: DBSCAN.mojo  DecisionTree.mojo  GBDT.mojo  KMeans.mojo  LogisticRegression.mojo  PolynomialRegression.mojo  preprocessing.mojo
pypi/_mojmelo/mojmelo/utils/: utils.mojo
pypi/_mojmelo/mojmelo/utils/hdbscan/: hdbscan_linkage.mojo
pypi/_mojmelo/mojmelo/utils/libsvm/: svm.mojo  svm_problem.mojo
pypi/_mojmelo/mojmelo/utils/mojmelo_matmul/: params.mojo
releases/: mojmelo.mojopkg
tests/: Adaboost_test.mojo  Adaboost_test.py  DBSCAN_test.mojo  DBSCAN_test.py  DTreeC_test.mojo  DTreeR_test.mojo  GBDTC_test.mojo  GBDTR_test.mojo  GaussianNB_test.mojo  GaussianNB_test.py  HDBSCAN_test.mojo  KMeans_test.mojo  KMeans_test.py  KNN_test.mojo  KNN_test.py  LDA_test.mojo  LDA_test.py  LR_test.mojo  (+27 more)
(+341 files in other folders)
